@@ -1,14 +1,13 @@
 package dowob.xyz.stockwebv2.backtest.api;
 
 import dowob.xyz.stockwebv2.backtest.service.BacktestService;
-import dowob.xyz.stockwebv2.common.api.ApiMeta;
 import dowob.xyz.stockwebv2.common.api.ApiResponse;
 import dowob.xyz.stockwebv2.common.api.PageResponse;
 import dowob.xyz.stockwebv2.common.error.BusinessException;
 import dowob.xyz.stockwebv2.common.error.ErrorCode;
-import dowob.xyz.stockwebv2.infrastructure.web.TraceIdFilter;
+import dowob.xyz.stockwebv2.infrastructure.web.ApiMetaFactory;
 import jakarta.validation.Valid;
-import org.slf4j.MDC;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,8 +16,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.time.OffsetDateTime;
 
 @RestController
 @RequestMapping("/api/v1/backtests")
@@ -35,24 +32,24 @@ public class BacktestController {
         Authentication authentication
     ) {
         Long userId = authenticatedUserId(authentication);
-        return ApiResponse.success(backtestService.createRun(userId, request), meta());
+        return ApiResponse.success(backtestService.createRun(userId, request), ApiMetaFactory.current());
     }
 
     @PostMapping("/strategies/validate")
     public ApiResponse<StrategyValidationDto> validateStrategy(@Valid @RequestBody ValidateStrategyRequest request) {
-        return ApiResponse.success(backtestService.validateStrategy(request), meta());
+        return ApiResponse.success(backtestService.validateStrategy(request), ApiMetaFactory.current());
     }
 
     @GetMapping("/runs/{runId}")
     public ApiResponse<BacktestRunDto> getRun(@PathVariable String runId, Authentication authentication) {
         Long userId = authenticatedUserId(authentication);
-        return ApiResponse.success(backtestService.getRun(userId, runId), meta());
+        return ApiResponse.success(backtestService.getRun(userId, runId), ApiMetaFactory.current());
     }
 
     @GetMapping("/runs/{runId}/result")
     public ApiResponse<BacktestResultDto> getResult(@PathVariable String runId, Authentication authentication) {
         Long userId = authenticatedUserId(authentication);
-        return ApiResponse.success(backtestService.getResult(userId, runId), meta());
+        return ApiResponse.success(backtestService.getResult(userId, runId), ApiMetaFactory.current());
     }
 
     @GetMapping("/runs")
@@ -68,11 +65,11 @@ public class BacktestController {
             symbol,
             parseQueryInt(page, "page"),
             parseQueryInt(size, "size")
-        ), meta());
+        ), ApiMetaFactory.current());
     }
 
     private Long authenticatedUserId(Authentication authentication) {
-        if (authentication == null || authentication.getName() == null || authentication.getName().isBlank()) {
+        if (authentication == null || StringUtils.isBlank(authentication.getName())) {
             throw new BusinessException(ErrorCode.AUTH_INVALID_CREDENTIALS, ErrorCode.AUTH_INVALID_CREDENTIALS.defaultMessage());
         }
         try {
@@ -88,10 +85,5 @@ public class BacktestController {
         } catch (NumberFormatException exception) {
             throw new BusinessException(ErrorCode.VALIDATION_FAILED, field + " must be a number");
         }
-    }
-
-    private ApiMeta meta() {
-        String traceId = MDC.get(TraceIdFilter.TRACE_ID);
-        return new ApiMeta(traceId == null ? "missing-trace-id" : traceId, OffsetDateTime.now());
     }
 }
