@@ -2,6 +2,7 @@ package dowob.xyz.stockwebv2.trading.domain;
 
 import dowob.xyz.stockwebv2.common.error.BusinessException;
 import dowob.xyz.stockwebv2.common.error.ErrorCode;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.Locale;
 
@@ -10,7 +11,7 @@ public enum TradeType {
     SELL;
 
     public static TradeType fromApiValue(String value) {
-        if (value == null || value.isBlank()) {
+        if (StringUtils.isBlank(value)) {
             throw new BusinessException(ErrorCode.TRADE_UNSUPPORTED_TYPE, ErrorCode.TRADE_UNSUPPORTED_TYPE.defaultMessage());
         }
         try {
